add sections main and fact

--- a/index.html
+++ b/index.html
@@ -22,18 +22,74 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- Section 1 Main-page -->
+
     <section class="main-page">
-      <div class="main-page-wrapper">
-        <p>Доброго вечора, ми з України</p>
-        <h1>Бандерогусь</h1>
-        <p>
-          Спеціальний бойовий гусак із біолабораторій України. Пишаюся своїми
-          подвигами, бороню Батьківщину та підтримую позитивний дух народу.
-          Слава Україні!
-        </p>
-        <button>Запустити гуся</button>
+      <div class="container-wrapper">
+        <img src="./images/logo.svg" alt="GOIT logo" class="main-logo" />
+        <div class="main-page-wrapper-text">
+          <p class="main-title-heading-text">Доброго вечора, ми з України</p>
+          <h1 class="main-title-heading">Бандерогусь</h1>
+          <p class="main-text">
+            Спеціальний бойовий гусак із біолабораторій України. Пишаюся своїми
+            подвигами, бороню Батьківщину та підтримую позитивний дух народу.
+            Слава Україні!
+          </p>
+          <button class="main-btn" type="button">Запустити гуся</button>
+        </div>
+        <img src="./images/goose-main.svg" alt="Бандерогусь" />
       </div>
-      <img src="./images/goose-main.svg" alt="Бандерогусь" />
+    </section>
+
+    <!-- Section Fact -->
+
+    <section class="facts">
+      <img src="./images/truzyb.svg" class="facts-truzyb" alt="Герб Тризуб" />
+      <h2 class="facts-title-headline">Цікаві факти про бандерогусей</h2>
+      <p class="facts-text">
+        Зазвичай бандерогуси — виключно мирні птахи. Але у разі небезпеки можуть
+        атакувати ворога системою надпотужного озброєння. Також нищать
+        психологічно, активуючи високочастотне шипіння та розмахування крилами
+      </p>
+
+      <div class="container-wrapper">
+        <div class="facts-wrapper">
+          <img
+            src="./images/goose-1.svg"
+            class="facts-truzyb"
+            alt="Бандерогусик маленький"
+          />
+          <h3 class="facts-title-subject">Система навігації</h3>
+          <p class="facts-text-info">
+            Супутниковий GPS та ехолокатори розпізнають ворожу техніку навіть на
+            етапі збірки
+          </p>
+        </div>
+        <div class="facts-wrapper">
+          <img
+            src="./images/goose-1.svg"
+            class="facts-truzyb"
+            alt="Бандерогусик маленький"
+          />
+          <h3 class="facts-title-subject">Система навігації</h3>
+          <p class="facts-text-info">
+            Супутниковий GPS та ехолокатори розпізнають ворожу техніку навіть на
+            етапі збірки
+          </p>
+        </div>
+        <div class="facts-wrapper">
+          <img
+            src="./images/goose-1.svg"
+            class="facts-truzyb"
+            alt="Бандерогусик маленький"
+          />
+          <h3 class="facts-title-subject">Система навігації</h3>
+          <p class="facts-text-info">
+            Супутниковий GPS та ехолокатори розпізнають ворожу техніку навіть на
+            етапі збірки
+          </p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
