--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preload" href="./images/gus-anim.gif" as="image" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -35,7 +36,9 @@
             подвигами, бороню Батьківщину та підтримую позитивний дух народу.
             Слава Україні!
           </p>
-          <button class="main-btn" type="button">Запустити гуся</button>
+          <button class="main-btn" id="go-to-form-btn" type="button">
+            Запустити гуся
+          </button>
         </div>
         <img src="./images/goose-main.svg" alt="Бандерогусь" />
       </div>
@@ -56,8 +59,8 @@
         <div class="facts-wrapper">
           <img
             src="./images/goose-1.svg"
-            class="facts-truzyb"
-            alt="Бандерогусик маленький"
+            class="facts-icon-banderogoose"
+            alt="banderogoose"
           />
           <h3 class="facts-title-subject">Система навігації</h3>
           <p class="facts-text-info">
@@ -67,29 +70,69 @@
         </div>
         <div class="facts-wrapper">
           <img
-            src="./images/goose-1.svg"
-            class="facts-truzyb"
-            alt="Бандерогусик маленький"
+            src="./images/goose-2.svg"
+            class="facts-icon-banderogoose"
+            alt="banderogoose"
           />
-          <h3 class="facts-title-subject">Система навігації</h3>
+          <h3 class="facts-title-subject">Очі-тепловізори</h3>
           <p class="facts-text-info">
-            Супутниковий GPS та ехолокатори розпізнають ворожу техніку навіть на
-            етапі збірки
+            Допомагають виявити характер сигнатури об’єктів та значно підвищують
+            точність удару
           </p>
         </div>
         <div class="facts-wrapper">
           <img
-            src="./images/goose-1.svg"
-            class="facts-truzyb"
-            alt="Бандерогусик маленький"
+            src="./images/goose-3.svg"
+            class="facts-icon-banderogoose"
+            alt="banderogoose"
           />
-          <h3 class="facts-title-subject">Система навігації</h3>
+          <h3 class="facts-title-subject">Байракрила</h3>
           <p class="facts-text-info">
-            Супутниковий GPS та ехолокатори розпізнають ворожу техніку навіть на
-            етапі збірки
+            Можуть нести 2-4 керовані ракети, що вражають ціль на відстані
+            «ніхріна собі» кілометрів
           </p>
         </div>
       </div>
     </section>
+
+    <!-- Section 3 Form -->
+
+    <section class="section-form">
+      <form action="#" class="form" id="form">
+        <img
+          src="./images/truzyb.svg"
+          class="facts-truzyb-form"
+          alt="Герб Тризуб"
+        />
+        <h3 class="form-title-subject">Поділися, будь ласка, поштою</h3>
+        <p class="form-text">та запиши гуся до бандерозагону</p>
+        <div class="form-input-wrapper form-input-wrapper-name">
+          <label for="user-name" class="form-label">Ім'я</label>
+
+          <input
+            type="text"
+            class="form-input"
+            name="username"
+            id="user-name"
+            autocomplete="name"
+          />
+        </div>
+        <div class="form-input-wrapper form-input-wrapper-email">
+          <label for="user-email" class="form-label">Email</label>
+
+          <input
+            type="email"
+            class="form-input"
+            name="useremail"
+            id="user-email"
+            autocomplete="email"
+          />
+        </div>
+        <button class="form-btn" type="submit" id="launch-btn">
+          Запустити гуся
+        </button>
+      </form>
+    </section>
+    <script src="js/form.js"></script>
   </body>
 </html>
